# retrievers

./: .gitignore  .pdm-python  Makefile  README.rst  pyproject.toml  requirements.txt
.github/workflows/: build.yml  release.yml  test-executions.yml  testpypi.yml
src/: __init__.py
src/Retrievers.egg-info/: PKG-INFO  SOURCES.txt
src/Test.egg-info/: PKG-INFO  SOURCES.txt
src/models/: SingleBertEmbedder.py
src/retriever_transformers/evaluators/: DistanceRankingEvaluator.py  ScoreRankingEvaluator.py  evaluator.py
src/retriever_transformers/models/: CrossAttentionDistancePredictor.py
src/retriever_transformers/retrievers/: BertEmbedderRetriever.py  BertEmbedderRetriever_test.py  CrossAttentionRetriever.py  retriever.py
src/retrievers/: BertEmbedderRetriever.py  CrossAttentionRetriever.py
src/tests/models/: test_CrossAttentionDistancePredictor.py
src/tests/retrievers/: test_CrossAttentionRetriever.py
tests/models/: test_CrossAttentionDistancePredictor.py  test_SingleBertEmbedder.py
tests/retrievers/: test_BertEmbedderRetriever.py  test_CrossAttentionRetriever.py
