# pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "retriever_transformers"
version = "0.0.6"
dependencies = [
    "torch",
    "transformers",
    'numpy',
    'tqdm'
]
readme = "README.rst"
[project.optional-dependencies]
dev = ["pip-tools", "pytest"]
