# pyproject.toml

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "retriever-transformers"
dynamic = ["version"]
dependencies = [
    "torch",
    "transformers",
    'numpy',
    'tqdm',
    'matplotlib',
    "certifi==2024.8.30",
    "charset-normalizer==3.3.2",
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "filelock==3.16.1",
    "fonttools==4.53.1",
    "fsspec==2024.9.0",
    "huggingface-hub==0.25.0",
    "idna==3.10",
    "jinja2==3.1.4",
    "kiwisolver==1.4.7",
    "markupsafe==2.1.5",
    "matplotlib==3.9.2",
    "mpmath==1.3.0",
    "networkx==3.3",
    "numpy==2.1.1",
    "packaging==24.1",
    "pillow==10.4.0",
    "pyparsing==3.1.4",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.2",
    "regex==2024.9.11",
    "requests==2.32.3",
    "safetensors==0.4.5",
    "six==1.16.0",
    "sympy==1.13.2",
    "tokenizers==0.19.1",
    "torch==2.4.1",
    "tqdm==4.66.5",
    "transformers==4.44.2",
    "typing-extensions==4.12.2",
    "urllib3==2.2.3",
]
readme = "README.md"
description = "Default template for PDM package"
authors = [
    {name = "Cyrille Siouffi-Degraeve", email = "cyrille.siouffi@proton.me"},
]
requires-python = ">=3.11"
license = {text = "MIT"}
[project.optional-dependencies]
dev = ["pip-tools", "pytest"]

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"

[tool.pdm.scripts]
test = "python -m pytest"
deploy-test = "pdm publish --quiet --repository testpypi --u __token__ -P"